tinyone project complete

--- a/index.html
+++ b/index.html
@@ -28,12 +28,13 @@
               <!-- insert your brand logo -->
               <img src="img/tinyone-1.png" alt="brand image not found" class="img-fluid">
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
-          
+
             <div class="collapse navbar-collapse custom-menu" id="navbarSupportedContent">
-             <ul class="navbar-nav ml-auto">
+              <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
                   <a class="nav-link" href="#">Features<span class="sr-only">(current)</span></a>
                 </li>
@@ -149,135 +150,234 @@
   </section>
   <!-- slider part/banner part end -->
   <!-- feature area start -->
- 
- <section class="feature-area">
+
+  <section class="feature-area">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-10 col-lg-10 col-sm-10 m-auto">
+          <div class="feature-top-text text-center">
+            <h2>Tinyone features</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique
+              bibendum. Donec rutrum sed sem quis venenatis.</p>
+          </div>
+        </div>
+      </div>
+      <!-- its for service area -->
+      <div class="row service">
+        <div class="col-md-4">
+          <div class="row">
+            <div class="col-lg-2 col-md-2 col-sm-12 col-12">
+              <!-- its for icon -->
+              <div class="service-icon">
+                <i class="fas fa-mobile-alt"></i>
+              </div>
+            </div>
+            <div class="col-lg-10 col-md-10 col-sm-12 col-12">
+              <!-- its for service content -->
+              <div class="service-text">
+                <h4>Fully Responsive</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique
+                  bibendum.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="row">
+            <div class="col-lg-2 col-md-2 col-sm-12 col-12">
+              <!-- its for icon -->
+              <div class="service-icon">
+                <i class="far fa-lemon"></i>
+              </div>
+            </div>
+            <div class="col-lg-10 col-md-10 col-sm-12 col-12">
+              <!-- its for service content -->
+              <div class="service-text">
+                <h4>Fully Layered PSD</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique
+                  bibendum.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="row">
+            <div class="col-lg-2 col-md-2 col-sm-12 col-12">
+              <!-- its for icon -->
+              <div class="service-icon">
+                <i class="far fa-folder"></i>
+              </div>
+            </div>
+            <div class="col-lg-10 col-md-10 col-sm-12 col-12">
+              <!-- its for service content -->
+              <div class="service-text">
+                <h4>Fully Responsive</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique
+                  bibendum.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- its for service second part -->
+      <div class="row service">
+        <div class="col-md-4">
+          <div class="row">
+            <div class="col-lg-2 col-md-2 col-sm-12 col-12">
+              <!-- its for icon -->
+              <div class="service-icon">
+                <i class="far fa-file-code"></i>
+              </div>
+            </div>
+            <div class="col-lg-10 col-md-10 col-sm-12 col-12">
+              <!-- its for service content -->
+              <div class="service-text">
+                <h4>Fully Responsive</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique
+                  bibendum.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="row">
+            <div class="col-lg-2 col-md-2 col-sm-12 col-12">
+              <!-- its for icon -->
+              <div class="service-icon">
+                <i class="far fa-envelope"></i>
+              </div>
+            </div>
+            <div class="col-lg-10 col-md-10 col-sm-12 col-12">
+              <!-- its for service content -->
+              <div class="service-text">
+                <h4>Fully Responsive</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique
+                  bibendum.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="row">
+            <div class="col-lg-2 col-md-2 col-sm-12 col-12">
+              <!-- its for icon -->
+              <div class="service-icon">
+                <i class="far fa-bookmark"></i>
+              </div>
+            </div>
+            <div class="col-lg-10 col-md-10 col-sm-12 col-12">
+              <!-- its for service content -->
+              <div class="service-text">
+                <h4>Fully Responsive</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique
+                  bibendum.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- communicate are start -->
+
+  <section class="communicate-part">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-10 col-10 col-sm-10 col-10 m-auto">
+          <!-- its for content -->
+          <div class="communicate-text text-center">
+            <h2>Keep in touch with us</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique
+              bibendum. Donec rutrum sed sem quis venenatis.</p>
+          </div>
+        </div>
+      </div>
+      <!-- its for form -->
+      <div class="row">
+        <div class="col-md-10 m-auto">
+          <div class="row custom-form">
+            <div class="col-md-9">
+              <form>
+                <div class="form-group">
+                  <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                    placeholder="Enter your email to update">
+                </div>
+            </div>
+            <div class="col-md-3">
+              <button type="submit" class="btn btn-primary custom-btn">Submit</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- its for social media -->
+      <div class="row">
+        <div class="col-md-10 m-auto">
+          <div class="social-media text-center">
+            <ul class="list-inline">
+              <li class="list-inline-item"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+              <li class="list-inline-item"><a href="#"><i class="fab fa-twitter"></i></a></li>
+              <li class="list-inline-item"><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+              <li class="list-inline-item"><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+   </div>
+ </section>
+ <!-- footer area start -->
+ <footer class="footer-area">
    <div class="container">
      <div class="row">
-       <div class="col-md-10 col-lg-10 col-sm-10 m-auto">
-         <div class="feature-top-text text-center">
-           <h2>Tinyone features</h2>
-           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum. Donec rutrum sed sem quis venenatis.</p>
-         </div>
+       <div class="col-lg-3 col-md-3 col-sm-4 col-4">
+         <address>
+          <span>HALOVIETNAM LTD</span> 
+          66, Dang Van ngu, Dong Da
+          Hanoi, Vietnam
+         </address>
+         <p>contact@halovietnam.com</p>
+         <p>+844 35149182</p>
        </div>
-     </div>
-<!-- its for service area -->
-     <div class="row service">
-       <div class="col-md-4">
-         <div class="row">
-           <div class="col-lg-2 col-md-2 col-sm-12 col-12">
-             <!-- its for icon -->
-             <div class="service-icon">
-              <i class="fas fa-mobile-alt"></i>
-             </div>
-           </div>
-           <div class="col-lg-10 col-md-10 col-sm-12 col-12">
-             <!-- its for service content -->
-             <div class="service-text">
-               <h4>Fully Responsive</h4>
-               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</p>
-             </div>
-           </div>
-         </div>
+       <div class="col-lg-2 col-md-2 col-sm-2 col-2">
+         <ul>
+          <li><a href="#">Examples</a></li>
+           <li><a href="#">Shop</a></li>
+           <li><a href="#">License</a></li>
+         </ul>
+       </div>
+       <div class="col-lg-2 col-md-2 col-sm-2 col-2">
+        <ul>
+         <li><a href="#">contact</a></li>
+          <li><a href="#">about</a></li>
+          <li><a href="#">terms</a></li>
+        </ul>
       </div>
-      <div class="col-md-4">
-        <div class="row">
-          <div class="col-lg-2 col-md-2 col-sm-12 col-12">
-            <!-- its for icon -->
-            <div class="service-icon">
-             <i class="far fa-lemon"></i>
-            </div>
-          </div>
-          <div class="col-lg-10 col-md-10 col-sm-12 col-12">
-            <!-- its for service content -->
-            <div class="service-text">
-              <h4>Fully Layered PSD</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</p>
-            </div>
-          </div>
-        </div>
-     </div>
-     <div class="col-md-4">
-      <div class="row">
-        <div class="col-lg-2 col-md-2 col-sm-12 col-12">
-          <!-- its for icon -->
-          <div class="service-icon">
-           <i class="far fa-folder"></i>
-          </div>
-        </div>
-        <div class="col-lg-10 col-md-10 col-sm-12 col-12">
-          <!-- its for service content -->
-          <div class="service-text">
-            <h4>Fully Responsive</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</p>
-          </div>
-        </div>
+      <div class="col-lg-2 col-md-2 col-sm-2 col-2">
+        <ul>
+         <li><a href="#">download</a></li>
+          <li><a href="#">suport</a></li>
+          <li><a href="#">documents</a></li>
+        </ul>
       </div>
-   </div>
-    </div>
-
-    <!-- its for service second part -->
-    <div class="row service">
-      <div class="col-md-4">
-        <div class="row">
-          <div class="col-lg-2 col-md-2 col-sm-12 col-12">
-            <!-- its for icon -->
-            <div class="service-icon">
-             <i class="far fa-file-code"></i>
-            </div>
-          </div>
-          <div class="col-lg-10 col-md-10 col-sm-12 col-12">
-            <!-- its for service content -->
-            <div class="service-text">
-              <h4>Fully Responsive</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</p>
-            </div>
-          </div>
-        </div>
+      <div class="col-lg-2 col-md-2 col-sm-2 col-2">
+        <ul>
+         <li><a href="#">media</a></li>
+          <li><a href="#">blog</a></li>
+          <li><a href="#">forums</a></li>
+        </ul>
+      </div>
      </div>
-     <div class="col-md-4">
-       <div class="row">
-         <div class="col-lg-2 col-md-2 col-sm-12 col-12">
-           <!-- its for icon -->
-           <div class="service-icon">
-           <i class="far fa-envelope"></i>
-           </div>
-         </div>
-         <div class="col-lg-10 col-md-10 col-sm-12 col-12">
-           <!-- its for service content -->
-           <div class="service-text">
-             <h4>Fully Responsive</h4>
-             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</p>
-           </div>
-         </div>
-       </div>
-    </div>
-    <div class="col-md-4">
-     <div class="row">
-       <div class="col-lg-2 col-md-2 col-sm-12 col-12">
-         <!-- its for icon -->
-         <div class="service-icon">
-          <i class="far fa-bookmark"></i>
-         </div>
-       </div>
-       <div class="col-lg-10 col-md-10 col-sm-12 col-12">
-         <!-- its for service content -->
-         <div class="service-text">
-           <h4>Fully Responsive</h4>
-           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</p>
-         </div>
-       </div>
-     </div>
-  </div>
    </div>
+ </footer>
+ <!-- footer area end -->
 
-  </div>
- </section>
 
 
-  <!-- footer part end-->
-  <script src="js/jquery-2.2.4.min.js"></script>
-  <!-- <script src="js/bootstrap.min.js"></script> -->
-  <script src="js/custom.js"></script>
+      <!-- footer part end-->
+      <script src="js/jquery-2.2.4.min.js"></script>
+      <!-- <script src="js/bootstrap.min.js"></script> -->
+      <script src="js/custom.js"></script>
 </body>
 
 </html>
